<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.attendancetaker.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_check_in"
            app:destination="@id/navigation_check_in"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_check_in"
        android:name="com.attendancetaker.fragments.CheckInFragment"
        android:label="@string/title_check_in"
        tools:layout="@layout/fragment_check_in" />

    <fragment
        android:id="@+id/navigations_history"
        android:name="com.attendancetaker.fragments.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>